[package]
name = "ftc"
version = "11.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library for running Rust code on FTC robots."
repository = "https://github.com/VivIsBee/ftc-rust"
keywords = ["robot", "robotics", "first-robotics"]
categories = ["science::robotics"]

[package.metadata.ftc]
controller_version = "11.1"

[dependencies]
ftc-rust-proc = { path = "./ftc-rust-proc", optional = true }

jni = "0.22.4"
paste = "1.0.15"

[features]
default = ["proc-macro"]
proc-macro = ["dep:ftc-rust-proc"]

[lints.rust]
missing_docs = "deny"
missing_debug_implementations = "warn"
unused_import_braces = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
ignore_without_reason = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
